--- a/watercon/templates/watercon/upload_csv.html
+++ b/watercon/templates/watercon/upload_csv.html
@@ -1,4 +1,5 @@
 {% extends 'watercon/base.html' %}
+{% load django_bootstrap_breadcrumbs %}
 
 {% block title %}Загрузка CSV документа{% endblock %}
 
