--- a/watercon/templates/watercon/upload_csv.html
+++ b/watercon/templates/watercon/upload_csv.html
@@ -5,7 +5,7 @@
 
 {% block breadcrumbs %}
     {{ block.super }}
-    {% breadcrumb "Upload csv" "watercon.views.upload_csv" %}
+    {% breadcrumb "Upload csv" "watercon/upload_csv" %}
 {% endblock %}
 
 {% block content %}
